# vector-autofill

./: .gitignore  README.md
extension/: package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/src/: manifest.json
extension/src/background/: service-worker.ts
extension/src/content/: content.ts  detector.ts  filler.ts
extension/src/popup/: popup.css  popup.html  popup.ts
extension/src/types/: index.ts
extension/src/utils/: api.ts  storage.ts
server/: pyproject.toml
server/server/: embeddings.py  main.py  matching.py  models.py
